# cosmic-golden-test

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: rust.yml
golden-macros/: Cargo.toml
golden-macros/src/: lib.rs
src/: lib.rs  renderer.rs  snapshot.rs
tests/: macro_tests.rs  smoke_test.rs
