[package]
name = "cosmic-golden"
description = "Golden image testing for libcosmic"
version = "0.1.0"
edition = "2024"
readme = "README.md"

homepage = "https://github.com/peterpaul/cosmic-golden-test"
repository = "https://github.com/peterpaul/cosmic-golden-test"
authors = ["Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"]
license = "MIT"

[workspace]
members = [
  ".",
  "golden-macros",
]
resolver = "3"

[dependencies]
futures = "0.3.32"
png = "0.18"

cosmic-golden-macros = { path = "golden-macros" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false

[package.metadata.release]
publish = false
tag-name = "{{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly=1},
  {file="CHANGELOG.md", search="\\[Unreleased\\]: .*", replace="[Unreleased]: https://github.com/peterpaul/cosmic-golden-test/compare/{{version}}...HEAD\n[{{version}}]: https://github.com/peterpaul/cosmic-golden-test/compare/{{prev_version}}...{{version}}", exactly=1},
]
