[package]
name = "cosmic-golden-macros"
description = "Golden image testing for libcosmic - macros"
version = "0.1.0"
edition = "2024"

homepage = "https://github.com/peterpaul/cosmic-golden-test"
repository = "https://github.com/peterpaul/cosmic-golden-test"
authors = ["Peterpaul Klein Haneveld <pp.kleinhaneveld@gmail.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
